Give effort as description list item

--- a/product-todo.org
+++ b/product-todo.org
@@ -2,13 +2,17 @@
     :PROPERTIES:
     :Effort:   0:30
     :END:
-- Can pitch companies in Burlington Mon and Tue for [2014-06-05 Thu] event
+  - benefit :: Can pitch companies in Burlington Mon and Tue for [2014-06-05 Thu] event
+  - effort :: 30min
 * in-app onboarding sequence to intro new users to product flow
     :PROPERTIES:
     :Effort:   1:00
     :END:
-- Mitigate new-user confusion
+  - benefit :: Mitigate new-user confusion
+  - effort :: 1hr
 * Draft product burndown chart for short-term feature roadmap
   :PROPERTIES:
   :Effort:   1:00
   :END:
+  - benefit :: Can prioritize / flex scope with fixed time budget
+  - effort :: 1hr
