--- a/product-todo.org
+++ b/product-todo.org
@@ -1,18 +1,31 @@
-* availabilities for next three days rather than two
-    :PROPERTIES:
-    :Effort:   0:30
-    :END:
-  - benefit :: Can pitch companies in Burlington Mon and Tue for [2014-06-05 Thu] event
-  - effort :: 30min
-* in-app onboarding sequence to intro new users to product flow
-    :PROPERTIES:
-    :Effort:   1:00
-    :END:
-  - benefit :: Mitigate new-user confusion
-  - effort :: 1hr
-* Draft product burndown chart for short-term feature roadmap
-  :PROPERTIES:
-  :Effort:   1:00
-  :END:
-  - benefit :: Can prioritize / flex scope with fixed time budget
-  - effort :: 1hr
+* TODO Recess 3.0 <2014-05-28 Wed>
+#+BEGIN: columnview :hlines 1 :id local
+| Task                               | Estimated Effort | CLOCKSUM |
+|------------------------------------+------------------+----------|
+| * TODO Recess 3.0 <2014-05-28 Wed> |             2:30 |     0:02 |
+| ** TODO three-day availability     |             0:30 |          |
+| ** TODO in-app onboarding          |             1:00 |          |
+| ** TODO burndown chart             |             1:00 |     0:02 |
+#+END:
+
+** TODO three-day availability
+     :PROPERTIES:
+     :Effort:   0:30
+     :END:
+   availabilities for next three days rather than two
+   - benefit :: Can pitch companies in Burlington Mon and Tue for [2014-06-05 Thu] event
+** TODO in-app onboarding
+     :PROPERTIES:
+     :Effort:   1:00
+     :END:
+   in-app onboarding sequence to intro new users to product flow
+   - benefit :: Mitigate new-user confusion
+** TODO burndown chart
+   :LOGBOOK:
+   CLOCK: [2014-05-28 Wed 10:30]--[2014-05-28 Wed 10:32] =>  0:02
+   :END:
+   :PROPERTIES:
+   :Effort:   1:00
+   :END:
+   Draft product burndown chart for short-term feature roadmap
+   - benefit :: Can prioritize / flex scope with fixed time budget
