--- a/product-todo.org
+++ b/product-todo.org
@@ -2,10 +2,10 @@
 #+BEGIN: columnview :hlines 1 :id local
 | Task                               | Estimated Effort | CLOCKSUM |
 |------------------------------------+------------------+----------|
-| * TODO Recess 3.0 <2014-05-28 Wed> |             2:30 |     0:02 |
+| * TODO Recess 3.0 <2014-05-28 Wed> |             2:30 |     0:49 |
 | ** TODO three-day availability     |             0:30 |          |
 | ** TODO in-app onboarding          |             1:00 |          |
-| ** TODO burndown chart             |             1:00 |     0:02 |
+| ** TODO burndown chart             |             1:00 |     0:49 |
 #+END:
 
 ** TODO three-day availability
@@ -22,6 +22,8 @@
    - benefit :: Mitigate new-user confusion
 ** TODO burndown chart
    :LOGBOOK:
+   CLOCK: [2014-05-28 Wed 11:10]--[2014-05-28 Wed 11:33] =>  0:23
+   CLOCK: [2014-05-28 Wed 10:46]--[2014-05-28 Wed 11:10] =>  0:24
    CLOCK: [2014-05-28 Wed 10:30]--[2014-05-28 Wed 10:32] =>  0:02
    :END:
    :PROPERTIES:
